# GetSpeed2

./: .gitignore  CMakeLists.txt  Makefile  README.md
assets/: airframe.json
debug/: program.out
lib/Windows/lib/: freetype.lib  freetyped.lib  glfw3.lib
src/: CMakeLists.txt  appNative.cpp  camera.cpp  font.cpp  game.cpp  main.cpp  sceneMaker.cpp  sceneManager.cpp  timer.cpp  title.cpp
src/Airframe/: airframe.cpp  airframe.hpp
src/AppNative/: CMakeLists.txt  appNative.cpp  appNative.hpp
src/Audio/: CMakeLists.txt  audio.cpp  audio.hpp  visualizer.cpp  visualizer.hpp
src/Camera/: camera.cpp  camera.hpp
src/CatmullRom/: CMakeLists.txt  catmullRom.cpp  catmullRom.hpp
src/Color/: CMakeLists.txt  color.cpp  color.hpp
src/Fade/: fade.cpp  fade.hpp
src/Font/: CMakeLists.txt  font.cpp  font.hpp
src/Fps/: fps.cpp  fps.hpp
src/Game/: game.cpp  game.hpp
src/Graphic/: CMakeLists.txt  graphic.cpp  graphic.hpp
src/Key/: CMakeLists.txt  key.cpp  key.hpp
src/LoadPath/: CMakeLists.txt  loadPath.cpp  loadPath.hpp
src/Mesh/: mesh.cpp  mesh.hpp
src/MeshLoader/: meshLoader.cpp  meshLoader.hpp
src/Mouse/: CMakeLists.txt  mouse.cpp  mouse.hpp
src/Noncopyable/: CMakeLists.txt  noncopyable.cpp  noncopyable.hpp
src/Random/: CMakeLists.txt  random.cpp  random.hpp
src/Rect/: CMakeLists.txt  rect.cpp  rect.hpp
src/Scene/: CMakeLists.txt  sceneBase.cpp  sceneBase.hpp  sceneMaker.cpp  sceneMaker.hpp  sceneManager.cpp  sceneManager.hpp
src/Scene/Game/: game.cpp  game.hpp
src/Scene/Title/: title.cpp  title.hpp
src/Stage/: stage.cpp  stage.hpp
src/Timer/: timer.cpp
src/Title/: title.cpp  title.hpp
src/TwBar/: twBar.hpp
src/TweakBar/: CMakeLists.txt  tweakBar.cpp
src/Utility/: CMakeLists.txt  utility.cpp  utility.hpp
src/Vector/: CMakeLists.txt  vector.hpp
src/header/: appNative.hpp  camera.hpp  debugIO.hpp  font.hpp  game.hpp  sceneBase.hpp  sceneMaker.hpp  sceneManager.hpp  timer.hpp  title.hpp  tweakbar.hpp  utility.hpp
vs2015/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  GetSpeed2.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
vs2015/src/: GetSpeed2.vcxproj  GetSpeed2.vcxproj.filters  cmake_install.cmake
vs2015/src/AppNative/: AppNative.vcxproj  AppNative.vcxproj.filters  cmake_install.cmake
vs2015/src/Audio/: Audio.vcxproj  Audio.vcxproj.filters  cmake_install.cmake
vs2015/src/Camera/: Camera.vcxproj  Camera.vcxproj.filters  cmake_install.cmake
vs2015/src/CatmullRom/: CatmullRom.vcxproj  CatmullRom.vcxproj.filters  cmake_install.cmake
vs2015/src/Color/: Color.vcxproj  Color.vcxproj.filters  cmake_install.cmake
vs2015/src/Fade/: Fade.vcxproj  Fade.vcxproj.filters  cmake_install.cmake
vs2015/src/Font/: Font.vcxproj  Font.vcxproj.filters  cmake_install.cmake
vs2015/src/Game/: Game.vcxproj  Game.vcxproj.filters  cmake_install.cmake
vs2015/src/Graphic/: Graphic.vcxproj  Graphic.vcxproj.filters  cmake_install.cmake
vs2015/src/Key/: Key.vcxproj  Key.vcxproj.filters  cmake_install.cmake
vs2015/src/LoadPath/: LoadPath.vcxproj  LoadPath.vcxproj.filters  cmake_install.cmake
vs2015/src/MainCamera/: MainCamera.vcxproj  MainCamera.vcxproj.filters  cmake_install.cmake
vs2015/src/Mouse/: Mouse.vcxproj  Mouse.vcxproj.filters  cmake_install.cmake
vs2015/src/Noncopyable/: Noncopyable.vcxproj  Noncopyable.vcxproj.filters  cmake_install.cmake
vs2015/src/Random/: Random.vcxproj  Random.vcxproj.filters  cmake_install.cmake
vs2015/src/Rect/: Rect.vcxproj  Rect.vcxproj.filters  cmake_install.cmake
vs2015/src/Scene/: Scene.vcxproj  Scene.vcxproj.filters  cmake_install.cmake
vs2015/src/Title/: Title.vcxproj  Title.vcxproj.filters  cmake_install.cmake
vs2015/src/TweakBar/: TweakBar.vcxproj  TweakBar.vcxproj.filters  cmake_install.cmake
vs2015/src/Utility/: Utility.vcxproj  Utility.vcxproj.filters  cmake_install.cmake
vs2015/src/Vector/: Vector.vcxproj  Vector.vcxproj.filters  cmake_install.cmake
vs2015/src/Window/: Window.vcxproj  Window.vcxproj.filters  cmake_install.cmake
xcode/: CMakeCache.txt  cmake_install.cmake
xcode/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeMinSizeRel  ReRunCMake.make  ZERO_CHECK_cmakeRulesBuildPhase.makeDebug
xcode/GetSpeed2.xcodeproj/: project.pbxproj
xcode/GetSpeed2.xcodeproj/project.xcworkspace/xcuserdata/yanai.xcuserdatad/: UserInterfaceState.xcuserstate
xcode/GetSpeed2.xcodeproj/xcuserdata/yanai.xcuserdatad/xcschemes/: ALL_BUILD.xcscheme  AppNative.xcscheme  Audio.xcscheme  CatmullRom.xcscheme  Color.xcscheme  Fade.xcscheme  Font.xcscheme  Game.xcscheme  GetSpeed2.xcscheme  Graphic.xcscheme  Key.xcscheme  LoadPath.xcscheme  MainCamera.xcscheme  Mouse.xcscheme  Noncopyable.xcscheme  Random.xcscheme  Rect.xcscheme  Scene.xcscheme  Title.xcscheme  TweakBar.xcscheme  (+4 more)
xcode/getspeed2.build/Debug/ALL_BUILD.build/: Script-5A1AE0BFA18145208A099AD8.sh  dgph  dgph~
xcode/getspeed2.build/Debug/ZERO_CHECK.build/: Script-F9D5586305014949A458AAD4.sh  dgph  dgph~
xcode/getspeed2.xcodeproj/: project.pbxproj
xcode/src/: cmake_install.cmake
xcode/src/AppNative/: cmake_install.cmake
xcode/src/Audio/: cmake_install.cmake
xcode/src/CatmullRom/: cmake_install.cmake
xcode/src/Color/: cmake_install.cmake
xcode/src/Debug/: getspeed2
xcode/src/Fade/: cmake_install.cmake
xcode/src/Font/: cmake_install.cmake
xcode/src/Game/: cmake_install.cmake
xcode/src/Graphic/: cmake_install.cmake
xcode/src/Key/: cmake_install.cmake
xcode/src/LoadPath/: cmake_install.cmake
xcode/src/MainCamera/: cmake_install.cmake
xcode/src/Mouse/: cmake_install.cmake
xcode/src/Noncopyable/: cmake_install.cmake
xcode/src/Random/: cmake_install.cmake
xcode/src/Rect/: cmake_install.cmake
xcode/src/Scene/: cmake_install.cmake
xcode/src/Title/: cmake_install.cmake
xcode/src/TweakBar/: cmake_install.cmake
xcode/src/Utility/: cmake_install.cmake
xcode/src/Vector/: cmake_install.cmake
(+24 files in other folders)
